compiler/tests/en/errors/overload_none.salam
// EXPECT: E012
func f(a : int): end

func main:
    f("str")
end
